<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/beer_pic"
        android:layout_width="110dp"
        android:layout_height="337dp"
        android:contentDescription="@string/picture_of_the_beer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cruzcampo" />

    <TextView
        android:id="@+id/beer_name"
        android:layout_width="213dp"
        android:layout_height="88dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/cerveza_cruzcampo"
        android:textColor="@color/material_dynamic_neutral30"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/beer_pic"
        app:layout_constraintTop_toTopOf="@id/beer_pic"
        tools:ignore="VisualLintBounds,TextSizeCheck" />

    <TextView
        android:id="@+id/beer_description"
        android:layout_width="285dp"
        android:layout_height="129dp"
        android:layout_marginStart="6dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/la_birra_de_los_que_manejan_maquinaria_pesada"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/beer_pic"
        app:layout_constraintTop_toBottomOf="@+id/beer_name"
        tools:ignore="VisualLintBounds,TextSizeCheck" />

    <TextView
        android:id="@+id/beer_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_6_botellines_a_3_50"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/beer_pic"
        app:layout_constraintTop_toBottomOf="@+id/beer_description"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/beer_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="22dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/me_los_quitan_de_las_manos"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/beer_pic"
        app:layout_constraintTop_toBottomOf="@+id/beer_price"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>